# DataManagement

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: NORDPOOL_CET_Spot_Power_EOD_Validated_1330_20260422133012.csv  NORDPOOL_CET_Spot_Power_INT_Validated_1330_20260422133017.csv  ref_data_market_area_mapping.csv
src/: decorator_utility.py  models.py
src/agent/: graph.py  prompts.py  state.py
src/agent/nodes/: code_generator.py  executor.py  planner.py  validator.py
src/app/: main.py
src/app/ui/: prompt_panel.py
src/configs/: settings.yaml
src/core/ingestion/: csv_loader.py
src/core/logging/: logger.py
src/core/snapshot/: snapshot_manager.py  version_store.py
src/core/transformations/: runner.py
storage/processed/: temp.csv
storage/snapshots/code/snap_20260505_091846/: meta.json  transform.py
storage/snapshots/code/snap_20260505_092128/: meta.json  transform.py
storage/snapshots/code/snap_20260505_093908/: meta.json  transform.py
storage/snapshots/code/snap_20260505_094923/: transform.py
storage/snapshots/data/snap_20260505_091846/: data.csv
storage/snapshots/data/snap_20260505_092128/: data.csv
storage/snapshots/data/snap_20260505_093908/: data.csv
