[project]
name = "dm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "langchain>=1.2.17",
    "langchain-ollama>=1.1.0",
    "langchain-google-genai>=0.1.0",
    "google-generativeai>=0.3.0",
    "langgraph>=1.1.10",
    "requests>=2.31.0",
    "langchain-community>=0.4.1",
    "streamlit>=1.57.0",
    "pyyaml>=6.0.3",
]
