[project]
name = "dm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "pyspark>=4.1.1",
    "pyyaml>=6.0.3",
    "streamlit>=1.57.0",
]
